src/test/ui/issues/issue-36617.stderr
error: `derive` may only be applied to structs, enums and unions
  --> $DIR/issue-36617.rs:1:1
   |
LL | #![derive(Copy)]
   | ^^^^^^^^^^^^^^^^ help: try an outer attribute: `#[derive(Copy)]`

error: aborting due to previous error

