src/test/ui/issues/issue-36617.rs
#![derive(Copy)] //~ ERROR `derive` may only be applied to structs, enums and unions

fn main() {}
